<resources>
    <string name="aardvark_about">About Aardvark</string>
    <string name="aardvark_about_desc">Version, Credits, and FAQs</string>
    <string name="aardvark_desc">The developer was too lazy to include a description.</string>
    <string name="aardvark_id">Aardvark ID</string>
    <string name="aardvark_name" translatable="false">Aardvark</string>
    <string name="action_map_type">Map type</string>
    <string name="action_map_type_normal">Normal</string>
    <string name="action_map_type_satellite">Satellite</string>
    <string name="action_map_type_terrain">Terrain</string>
    <string name="action_sort_events">Sort events</string>
    <string name="action_sort_events_ascending">Ascending</string>
    <string name="action_sort_events_descending">Descending</string>
    <string name="action_sort_events_distance">Distance</string>
    <string name="action_sort_events_measurements">Measurements</string>
    <string name="action_sort_events_time">Time</string>
    <string name="date_full_time_full">Full date\nFull time</string>
    <string name="date_full_time_long">Full date\nLong time</string>
    <string name="date_full_time_medium">Full date\nMedium time</string>
    <string name="date_full_time_short">Full date\nShort time</string>
    <string name="date_long_time_full">Long date\nFull time</string>
    <string name="date_long_time_long">Long date\nLong time</string>
    <string name="date_long_time_medium">Long date\nMedium time</string>
    <string name="date_long_time_short">Long date\nShort time</string>
    <string name="date_medium_time_full">Medium date\nFull time</string>
    <string name="date_medium_time_long">Medium date\nLong time</string>
    <string name="date_medium_time_medium">Medium date\nMedium time</string>
    <string name="date_medium_time_short">Medium date\nShort time</string>
    <string name="date_short_time_full">Short date\nFull time</string>
    <string name="date_short_time_long">Short date\nLong time</string>
    <string name="date_short_time_medium">Short date\nMedium time</string>
    <string name="date_short_time_short">Short date\nShort time</string>
    <string name="developer_email_aardvark" translatable="false">ThomasMohr1990@gmail.com</string>
    <string name="developer_name_aardvark" translatable="false">Thomas Mohr</string>
    <string name="developer_name_kerval" translatable="false">Markus Sommer</string>
    <string name="dialog_fingerprint_cancel">Cancel</string>
    <string name="dialog_fingerprint_recognized">Fingerprint recognized</string>
    <string name="dialog_fingerprint_subtitle">Confirm fingerprint to continue</string>
    <string name="dialog_fingerprint_title">Sign in</string>
    <string name="dialog_fingerprint_touch_sensor">Touch sensor</string>
    <string name="dialog_fingerprint_use_password">Use Password</string>
    <string name="distance">Distance</string>
    <string name="distance_in_kilometer" translatable="false">%1$.2f km</string>
    <string name="distance_in_meter" translatable="false">%1$.0f m</string>
    <string name="event_details">Details</string>
    <plurals name="event_fetch_count">
        <item quantity="one">Loaded %1$d event</item>
        <item quantity="other">Loaded %1$d events</item>
    </plurals>
    <string name="event_id">ID</string>
    <string name="event_time">Time</string>
    <string name="fingerprint_required">Access your secured environment</string>
    <string name="fingerprint_required_desc">Place your finger on the reader</string>
    <string name="google_maps_not_enabled">Google Maps is not enabled</string>
    <string name="google_maps_not_installed">Google Maps is not installed</string>
    <string name="grant_location_permission">Tap anywhere to grant location permission</string>
    <string name="grant_location_permission_settings">Grant location permission to use and customize location features</string>
    <string name="intro_easy_navigation">Easy Navigation</string>
    <string name="intro_easy_navigation_desc">Click tabs to navigate, click them again to trigger custom actions.</string>
    <string name="intro_end">Let\'s begin</string>
    <string name="intro_select_theme">Select a theme</string>
    <string name="intro_skip">Skip</string>
    <string name="intro_slide_to_continue">Swipe right to continue</string>
    <string name="intro_tap_to_exit">Tap anywhere to exit the intro</string>
    <string name="intro_tap_to_grant_access_fine_location_permission">Tap to grant location permission</string>
    <string name="intro_tap_to_grant_all_permissions">Tap to grant required permissions</string>
    <string name="intro_tap_to_grant_write_external_storage_permission">Tap to grant storage permission</string>
    <string name="intro_welcome_to_aardvark">Welcome to Aardvark</string>
    <string name="kerval_desc">Kotlin client for serval-dna REST-interface</string>
    <string name="kerval_name" translatable="false">Kerval</string>
    <string name="license_mit">MIT License</string>
    <string name="license_website_aardvark" translatable="false">https://github.com/Thames1990/aardvark/blob/master/LICENSE</string>
    <string name="license_website_kerval" translatable="false">https://github.com/CryptoCopter/kerval/blob/master/LICENSE</string>
    <string name="location">Location</string>
    <string name="location_address">Address</string>
    <string name="location_desc">Control your location settings</string>
    <string name="location_request_priority_balanced_power_accuracy">Block level accuracy</string>
    <string name="location_request_priority_balanced_power_accuracy_desc">Block level accuracy is considered to be about 100 meter accuracy. Using a coarse accuracy such as this often consumes less power.</string>
    <string name="location_request_priority_high_accuracy">High accuracy</string>
    <string name="location_request_priority_high_accuracy_desc">Return the finest location available</string>
    <string name="location_request_priority_low_power">City level accuracy</string>
    <string name="location_request_priority_low_power_desc">City level accuracy is considered to be about 10km accuracy. Using a coarse accuracy such as this often consumes less power.</string>
    <string name="location_request_priority_no_power">None</string>
    <string name="location_request_priority_no_power_desc">No locations will be returned unless a different client has requested location updates in which case this request will act as a passive listener to those locations.</string>
    <string name="map_style_aubergine">Aubergine</string>
    <string name="map_style_dark">Dark</string>
    <string name="map_style_night">Night</string>
    <string name="map_style_retro">Retro</string>
    <string name="map_style_silver">Silver</string>
    <string name="map_style_standard">Standard</string>
    <plurals name="measurement">
        <item quantity="one">%1$d measurement</item>
        <item quantity="other">%1$d measurements</item>
    </plurals>
    <string name="measurement_precipitation">Precipitation</string>
    <string name="measurement_radiation">Radiation</string>
    <string name="measurement_temperature">Temperature</string>
    <string name="measurement_wind">Wind</string>
    <string name="network_disconnected">No network connectivity</string>
    <string name="placeholder_desc">The developer was too lazy to include a layout</string>
    <string name="placeholder_title">DAMN</string>
    <string name="precipitation_unit_inches">Inches</string>
    <string name="precipitation_unit_inches_unit">in</string>
    <string name="precipitation_unit_millimeter">Millimeter</string>
    <string name="precipitation_unit_millimeter_unit">mm</string>
    <string name="preference_appearance">Appearance</string>
    <string name="preference_appearance_color_accent">Accent color</string>
    <string name="preference_appearance_color_background">Background color</string>
    <string name="preference_appearance_color_header">Header color</string>
    <string name="preference_appearance_color_icon">Icon color</string>
    <string name="preference_appearance_color_text">Text color</string>
    <string name="preference_appearance_date_time_format">Date/Time format</string>
    <string name="preference_appearance_desc">Theme, Items to display, etc</string>
    <string name="preference_appearance_global_header">Global Customization</string>
    <string name="preference_appearance_main_activity_layout">Main Activity Layout</string>
    <string name="preference_appearance_theme">Theme</string>
    <string name="preference_appearance_theme_header">Theme Customization</string>
    <string name="preference_appearance_tint_navbar">Tint navigation bar</string>
    <string name="preference_appearance_tint_navbar_desc">Navigation bar will be the same color as the header</string>
    <string name="preference_bar_bottom">Bottom bar</string>
    <string name="preference_bar_top">Top bar</string>
    <string name="preference_behaviour">Behaviour</string>
    <string name="preference_behaviour_analytics">Analytics</string>
    <string name="preference_behaviour_analytics_desc">Enable anonymous analytics to help improve the app. No personal information is ever exposed.</string>
    <string name="preference_behaviour_animations">Fancy Animations</string>
    <string name="preference_behaviour_animations_desc">Use ripples and animate transitions</string>
    <string name="preference_behaviour_changelog_desc">Show changelog after updates</string>
    <string name="preference_behaviour_confirm_exit">Confirm exit</string>
    <string name="preference_behaviour_desc">Define how the app interacts in certain settings</string>
    <string name="preference_behaviour_reset_analytics">Reset analytics</string>
    <string name="preference_behaviour_reset_analytics_confirmation">Your analytics collection was removed</string>
    <string name="preference_behaviour_reset_analytics_desc">Do you want to delete all collected analytics data?</string>
    <string name="preference_confirm_exit_desc">Show confirmation dialog before exiting the app</string>
    <string name="preference_event">Event</string>
    <string name="preference_event_desc">Define how certain properties of events are displayed</string>
    <string name="preference_event_precipitation_unit">Precipitation Unit</string>
    <string name="preference_event_radiation_unit">Radiation Unit</string>
    <string name="preference_event_temperature_unit">Temperature Unit</string>
    <string name="preference_event_wind_unit">Wind Unit</string>
    <string name="preference_experimental">Experimental</string>
    <string name="preference_experimental_already_enabled">Experimental section is already enabled.</string>
    <string name="preference_experimental_desc">Enable early access to potentially unstable features</string>
    <string name="preference_experimental_disclaimer">Disclaimer</string>
    <string name="preference_experimental_disclaimer_desc">Experimental features may be unstable and may never make it to production. Use at your own risk, send feedback, and feel free to disable them if they don\'t work well.</string>
    <string name="preference_experimental_enable_wifi_adb">Enable WiFi ADB</string>
    <string name="preference_experimental_enabled">Experimental section is enabled! Go back to settings.</string>
    <string name="preference_experimental_miscellaneous_header">Miscellaneous</string>
    <string name="preference_experimental_paging">Viewpager Swipe</string>
    <string name="preference_experimental_paging_desc">Allow swiping between the pages in the main view to switch tabs. Disabling this will prevent page swiping altogether.</string>
    <string name="preference_experimental_requires_secure_privacy">Requires secure privacy</string>
    <string name="preference_experimental_requires_wifi_adb">You need to enable WifiADB</string>
</resources>