<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_sort_events"
        android:title="@string/action_sort_events"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/action_sort_distance"
                android:title="@string/action_sort_events_distance">
                <menu>
                    <item
                        android:id="@+id/action_sort_distance_asc"
                        android:title="@string/action_sort_events_ascending" />
                    <item
                        android:id="@+id/action_sort_distance_desc"
                        android:title="@string/action_sort_events_descending" />
                </menu>
            </item>

            <item
                android:id="@+id/action_sort_measurements"
                android:title="@string/action_sort_events_measurements">
                <menu>
                    <item
                        android:id="@+id/action_sort_measurements_asc"
                        android:title="@string/action_sort_events_ascending" />
                    <item
                        android:id="@+id/action_sort_measurements_desc"
                        android:title="@string/action_sort_events_descending" />
                </menu>
            </item>

            <item
                android:id="@+id/action_sort_time"
                android:title="@string/action_sort_events_time">
                <menu>
                    <item
                        android:id="@+id/action_sort_time_asc"
                        android:title="@string/action_sort_events_ascending" />
                    <item
                        android:id="@+id/action_sort_time_desc"
                        android:title="@string/action_sort_events_descending" />
                </menu>
            </item>
        </menu>
    </item>

</menu>